# RestNinja

./: db.sqlite3  manage.py  pyproject.toml
company/: api.py  models.py  schemas.py
company/migrations/: 0001_initial.py  0002_alter_employee_department.py
htmx/: api.py  urls.py  views.py
htmx/templates/htmx/: contact.html  hello.html
restninja/: api.py  api_v2.py  api_v3.py  api_v4.py  asgi.py  settings.py  urls.py  wsgi.py
task/: models.py
task/migrations/: 0001_initial.py
